src/objects/Activity.object
<CustomObject>
    <fields>
        <fullName>Account_Name__c</fullName>
        <description>DMS</description>
        <label>Account Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Activity_CommChannel__c</fullName>
        <label>Activity CommChannel</label>
        <picklist>
            <picklistValues>
                <fullName>0=inbound call</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1=outbound call</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2=email</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>3=fax</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>4=direct mail/post</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>5=sms</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>6=web</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>7=social media</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>8=SSI Call</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>9=CSI Call</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Activity_Comment__c</fullName>
        <inlineHelpText>Activity Comment</inlineHelpText>
        <label>Activity Comment</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Activity_DataSource__c</fullName>
        <label>Activity DataSource</label>
        <picklist>
            <picklistValues>
                <fullName>Partners</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>3rd party data</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Event</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Web/Mobile Phone</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BBAC</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>OB Call</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>IB Call</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Dealers</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MB Magazine</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Mercedes-Benz</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>E-mail</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Activity_DataSubSource__c</fullName>
        <label>Activity DataSubSource</label>
        <picklist>
            <controllingField>Activity_DataSource__c</controllingField>
            <picklistValues>
                <fullName>Air China</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Jingdong mall</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Taobao station</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cooperation media</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>China telecom / 189 mailbox</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Dunhill</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>D&amp;G</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>HUGO BOSS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bank of communications</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>TNT</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Axciom</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>G2</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Auto Show</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other Event</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Mercedes - Benz interactive community</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ML web special</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>B web special</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Sina Blog</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SMART official website</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bitauto</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>E web special</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Pcauto</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Baidu</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>GLK web special</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Interaction through</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SoHu</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SNS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Mercedes - Benz website _ pre-sale</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Mercedes - Benz _ contact us _ test drive</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Mercedes - Benz _ contact us _ star gruppo</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Activity_Date__c</fullName>
        <label>Activity Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Activity_InboundCallNumber__c</fullName>
        <inlineHelpText>Activity InboundCallNumber</inlineHelpText>
        <label>Activity InboundCallNumber</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Activity_InboundExtNumber__c</fullName>
        <label>Activity InboundExtNumber</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Activity_Info__c</fullName>
        <inlineHelpText>Activity Info</inlineHelpText>
        <label>Activity Info</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Activity_LeadsData__c</fullName>
        <label>Activity LeadsData</label>
        <picklist>
            <picklistValues>
                <fullName>Online Registration</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Dealer</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MBCL</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Data marketing</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>IB</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MB Magazine</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Partnership Event</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Autoshow</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>DMS</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Activity_OutboundCallSource__c</fullName>
        <label>Activity OutboundCallSource</label>
        <picklist>
            <picklistValues>
                <fullName>Other</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Partners</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Radio</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Outdoor Advertising</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Newspaper/Magazine</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Activity</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Email</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>TV Advertising</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Telephone Contact</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Mail</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Message</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Dealer Exhibition Hall</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Web/Mobile Phone</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Activity_Purpose__c</fullName>
        <inlineHelpText>Activity Purpose</inlineHelpText>
        <label>Activity Purpose</label>
        <picklist>
            <picklistValues>
                <fullName>0=welcome call</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2=data cleansing</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>3=feedback for service request</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>4=DM return</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>5=SMS survey</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>6=Outbound survey</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Activity_Resolution__c</fullName>
        <label>Activity Resolution</label>
        <picklist>
            <picklistValues>
                <fullName>Send Email</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CSR Answer</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>FAQ &amp; CSR Answer</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Call Transfer</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>FAQ Answer</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CSR Answer &amp; Solution</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Activity_Status__c</fullName>
        <label>Activity Status</label>
        <picklist>
            <picklistValues>
                <fullName>0=not started</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1=no answer</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2=need call back</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>3=busy</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>4=reject</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>5=wrong number</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>6=no such person</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>7=invalid data</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>8=reservation</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>9=failed to send SMS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>10=failed to send Email</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>11=failed to send fax</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>12=successful</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>13=invalid call</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>call transfer</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Sent</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Failed</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Open</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Returned</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Success</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Fail-Technical</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Fail-Content</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Fail-Blacklist.</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Pending</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Click</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Subscribe</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Unsubscribe</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Hard Bounced</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Soft Bounced</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Requested</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Actvity_SubType__c</fullName>
        <label>Actvity SubType</label>
        <picklist>
            <controllingField>Actvity_Type__c</controllingField>
            <picklistValues>
                <fullName>Consult smart</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Deposit Refund</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cancel Contact/Mail/Email</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Modify personal information</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Mercedes-Benz Magazine</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Test Drive</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Brochure</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Consult userd car trade-in</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Groupbuy</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Consult Chrysler</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Consult Sebring</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Diplomatic Car</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Request Manual and Catalog</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Price and Evaluating</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Consult Function, Technology, Accessory Information</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Consult Production Information</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Consult series C (CKD)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Consult series E (CKD)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Arrange Repair Points</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Consult Warranty</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Technology/Accessory/Maintenance Consult</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Consult Club Information</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Journalist/Cameraman/Medium Consult</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Product Recall</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Crisis Marketing</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Consult Mercedes-Benz Truck</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Consult Mercedes-Benz Minibus</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Mercedes-Benz Gift</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Market/Sponsor &amp; Partner Chance</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Actvity_Type__c</fullName>
        <inlineHelpText>Communication Type</inlineHelpText>
        <label>Actvity Type</label>
        <picklist>
            <picklistValues>
                <fullName>Smart</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Edit Profile</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Temporary hotline</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Second-hand car replacement</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Product Information</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Warranty and Maintenance</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Club</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Public Relations</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Recession Marketing</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Inquire Mercedes Truck</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Inquire Mercedes van</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Mercedes&apos; Gift</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Marketing opportunities</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Complaints and feedback</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Recruitment activities</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Activity</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Dealers Contact</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Network development department</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Purchase and delivery</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Maybach</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Roadside Assistance</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Finance and Insurance</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>CustomerName__c</fullName>
        <description>SSI</description>
        <label>CustomerName</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Dealer_Name__c</fullName>
        <label>Dealer Name</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Email_Address__c</fullName>
        <label>Email Address</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>End_call_time__c</fullName>
        <description>SSI</description>
        <label>End call time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Follow_Up_Date__c</fullName>
        <label>Follow Up Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Follow_Up_Type__c</fullName>
        <label>Follow Up Type</label>
        <picklist>
            <picklistValues>
                <fullName>Smart</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Edit Profile</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Temporary hotline</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Second-hand car replacement</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Product Information</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Warranty and Maintenance</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Club</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Public Relations</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Recession Marketing</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Inquire Mercedes Truck</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Inquire Mercedes van</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Mercedes&apos; Gift</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Marketing opportunities</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Complaints and feedback</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Recruitment activities</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Activity</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Dealers Contact</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Network development department</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Purchase and delivery</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Maybach</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Roadside Assistance</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Finance and Insurance</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Generate_QC__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Generate QC</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>HomeMobilePhone__c</fullName>
        <description>SSI</description>
        <label>HomeMobilePhone</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>IB_Status__c</fullName>
        <label>IB Status</label>
        <picklist>
            <picklistValues>
                <fullName>Valid</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Invalid</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Error</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>OB_Status__c</fullName>
        <label>OB Status</label>
        <picklist>
            <picklistValues>
                <fullName>0=not started</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1=no answer</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2=need call back</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>3=busy</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>4=reject</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>5=wrong number</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>6=no such person</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>7=invalid data</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>8=reservation</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>9=failed to send SMS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>10=failed to send Email</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>11=failed to send fax</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>12=successful</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>13=invalid call</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>OfficePhone__c</fullName>
        <description>SSI</description>
        <label>OfficePhone</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>PersonAssistantPhone__c</fullName>
        <description>DMS</description>
        <label>Asst. Phone</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>PersonHomePhone__c</fullName>
        <description>DMS</description>
        <label>Home Phone</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>PersonMobilePhone__c</fullName>
        <description>DMS</description>
        <label>Mobile</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>PersonOtherPhone__c</fullName>
        <description>DMS</description>
        <label>Other Phone</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Phone__c</fullName>
        <description>DMS</description>
        <label>Phone</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Phone_number__c</fullName>
        <label>Phone number</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Priority__c</fullName>
        <label>Priority</label>
        <picklist>
            <picklistValues>
                <fullName>1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>3</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>4</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>5</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>6</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>7</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>8</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>9</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>QC_Link__c</fullName>
        <label>QC Link</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>QC_Quantity__c</fullName>
        <label>QC Quantity</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Recording_ID__c</fullName>
        <label>Recording ID</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>Resource_Required__c</fullName>
        <description>Used only for Campaign Task.</description>
        <label>Resource Required</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Result__c</fullName>
        <label>Result</label>
        <picklist>
            <picklistValues>
                <fullName>Solved</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Unsolved</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>SMS_Content__c</fullName>
        <label>SMS Content</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SSI_Status__c</fullName>
        <label>SSI Status</label>
        <picklist>
            <picklistValues>
                <fullName>Successful</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Number Does Not Exist</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Unanswered</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Fax</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Engaged</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Phone Shut Down</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Insufficient Fund</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Number Expired</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Out of Service</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Voice Mail</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Call Limitation</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Wrong Number</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Unauthorized Dealer</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Unable to Contact Qualified Interviewee</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Interviewed</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Language Obstacle</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No Purchase</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other Status</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Expired</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Interview Reservation</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other Status (Transfer to dealer)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Rejection During the Probing Question Phase</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Rejection During the Main Part of the Interview</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Vehicle Sold</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Politely Decline</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Did Not Fully Participating in Car Purchase Process</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Unable to Find Qualified Interviewee</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Inconsistent Car Model</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Not the Car Purchase Decision Maker</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Inconsistent Car Pick Up Time</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Start_call_time__c</fullName>
        <description>SSI</description>
        <label>Start call time</label>
        <type>DateTime</type>
    </fields>
</CustomObject>